# ThreadPool

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: base.yml  dockcross.yml
cmake/: install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example_1.cpp  example_2.cpp  function_example.cpp
include/ThreadPool/: ThreadPool.hpp
test/: CMakeLists.txt
test/source/: ThreadPool_bench.cpp  ThreadPool_test.cpp
tools/: ninja-builder.sh
